# yawps

./: .gitignore  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  terraform.tf  tox.ini
.github/workflows/: sast.yml  tests.yml
tests/: conftest.py  mock_aws.py  test_cloudcustodian.py  test_critical.py  test_lambda.py
tests/fixtures/: cloudcustodian.json  eventbridge.json  eventbridge_critical.json
yawps/: exceptions.py  lambda_function.py
